derive/tests/snapshots/qualified_type_spellings/Draft/get_all_drafts.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `draft` table.
    pub fn get_all_drafts<'a>(&'a self) -> impl Iterator<Item = Draft> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().draft().iter()
    }
}
